testing/tests/ui/as-primitive-type.stderr
error: `as` operator expects the name of a primitive type on its right-hand side
 --> <source attribute>:1:8
       "as 4567 }}"
 --> tests/ui/as-primitive-type.rs:4:21
  |
4 | #[template(source = r#"{{ 1234 as 4567 }}"#, ext = "html")]
  |                     ^^^^^^^^^^^^^^^^^^^^^^^

error: `as` operator expects the name of a primitive type on its right-hand side
 --> <source attribute>:1:8
       "as ? }}"
 --> tests/ui/as-primitive-type.rs:8:21
  |
8 | #[template(source = r#"{{ 1234 as ? }}"#, ext = "html")]
  |                     ^^^^^^^^^^^^^^^^^^^^

error: `as` operator expects the name of a primitive type on its right-hand side, found `u1234`
 --> <source attribute>:1:8
       "as u1234 }}"
  --> tests/ui/as-primitive-type.rs:12:21
   |
12 | #[template(source = r#"{{ 1234 as u1234 }}"#, ext = "html")]
   |                     ^^^^^^^^^^^^^^^^^^^^^^^^

error: `as` operator expects the name of a primitive type on its right-hand side, found `core`
 --> <source attribute>:1:8
       "as core::primitive::u32 }}"
  --> tests/ui/as-primitive-type.rs:16:21
   |
16 | #[template(source = r#"{{ 1234 as core::primitive::u32 }}"#, ext = "html")]
   |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: `as` operator expects the name of a primitive type on its right-hand side, found `int32_t`
 --> <source attribute>:1:8
       "as int32_t }}"
  --> tests/ui/as-primitive-type.rs:20:21
   |
20 | #[template(source = r#"{{ 1234 as int32_t }}"#, ext = "html")]
   |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^

error: `as` operator expects the name of a primitive type on its right-hand side, found `int32_t`
 --> <source attribute>:1:35
       "as int32_t }}"
  --> tests/ui/as-primitive-type.rs:24:21
   |
24 | #[template(source = r#"{{ (1234 + 4 * 12 / 45675445 - 13) as int32_t }}"#, ext = "html")]
   |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
